Обновил paths для новых тасков.
Добавил 11ty, его конфиг и настройки для gulp & 11ty в appConfig.js.
Добавил минификатор для HTML в конфиге .eleventy.js.

Разделил gulpfile на отдельные таски.

Добавил таск для скейла изображений под ретину и конфиг для скейла в appConfig. + Таск для конвертации в .webp.

Написал часть шорткода для тега <picture> в gulp&11ty/plugins/eleventy-…-picture. #TODO: дописать после получения юзкейсов.

Исключил таски browsersync, html из работы.

--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -1,1 +1,27 @@
-{% extends "layouts/main.njk" %}
+---
+layout: main.njk
+
+---
+
+{# {% extends "layouts/main.njk" %} #}
+{# {% from "macro/macro-img.njk" import picture %} #}
+
+{% block main %}
+
+
+{# {{ picture(
+   source={
+      '(min-width: 1004px)': 'images/logo-desktop',
+      '(min-width: 684px)': 'images/logo-tablet'
+   }, 
+   img=[
+   'page-header__logo-image', 'images/logo-mobile', 'Логотип Барбершопа «Бородинский»', '226', '85'
+   ], 
+   retina=['2x', '1x'], 
+   formats=['.webp', '.png'],
+   class='page-header__logo-picture')
+}} #}
+sefsfse
+asdgdsh asdsaf sad ad asd  asd asd as a
+
+{% endblock %}
